# mis_eventos_completo

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env  Dockerfile  README.md  docker-compose.yml
backend/app/: auth.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  events.py  registrations.py
backend/app/tests/: test_auth.py
